--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Additional user: 
+Serina Jefthas <serina.jefthas@gmail.com>
